[package]
name = "monitor-examples"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "example1"
path = "src/example1/main.rs"

[[bin]]
name = "example2"
path = "src/example2/main.rs"

[[bin]]
name = "example3"
path = "src/example3/main.rs"

[[bin]]
name = "example4"
path = "src/example4/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
